# gb-en-compiler

./: .gitignore  BUILD_PLAN.md  CMakeLists.txt  Makefile  README.md  build.bat  build.sh
examples/: advanced.c  calculator.c  calculator.txt  conditional.c  conditional.txt  factorial.c  factorial.txt  hello.c  hello.txt  loop.c
src/: ast.c  ast.h  formatter.c  formatter.h  lexer.c  lexer.h  main.c  parser.c  parser.h  semantic.c  semantic.h  symbol_table.c  symbol_table.h  translator.c  translator.h  utils.c  utils.h
